<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.RegisterActivity">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:id="@+id/ra_accountLayout"
    android:gravity="center_horizontal"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login_activity_account_hint"
        android:ems="10"
        android:id="@+id/ra_edit_username" />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/ra_accountLayout"
    android:layout_alignParentStart="true"
    android:gravity="center_horizontal"
    android:id="@+id/ra_passwordLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_activity_password_hint"
        android:ems="10"
        android:id="@+id/ra_edit_password" />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/ra_passwordLayout"
    android:layout_alignParentStart="true"
    android:gravity="center_horizontal"
    android:id="@+id/ra_nameLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register_activity_name_hint"
        android:ems="10"
        android:id="@+id/ra_edit_name" />
</LinearLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_activity_btn"
    android:id="@+id/ra_btn_register"
    android:layout_below="@+id/ra_nameLayout"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="35dp" />


</RelativeLayout>